# golang-gin/api/reservation/swagger.json
@@ -72,6 +72,11 @@
                 "summary": "list airports",
                 "parameters": [
                     {
+                        "type": "integer",
+                        "name": "cursor_next",
+                        "in": "query"
+                    },
+                    {
                         "type": "string",
                         "name": "search",
                         "in": "query"
